--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Add Data",
   "main": "server.js",
+  "engines": {
+   "node": "6.11.1"
+ }
   "scripts": {
 
     "start": "node server.js",
